--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,68 @@
-certifi==2025.10.5
+absl-py==2.3.1
+altair==6.0.0
+astunparse==1.6.3
+attrs==25.4.0
+blinker==1.9.0
+cachetools==6.2.4
+certifi==2026.1.4
 charset-normalizer==3.4.4
-click==8.1.8
+click==8.3.1
 colorama==0.4.6
-gTTS==2.5.4
+flatbuffers==25.12.19
+gast==0.7.0
+gitdb==4.0.12
+GitPython==3.1.46
+google-auth==2.47.0
+google-auth-oauthlib==1.2.4
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
 idna==3.11
-pygame==2.6.1
+Jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+keras==2.15.0
+libclang==18.1.1
+Markdown==3.10
+MarkupSafe==3.0.3
+ml-dtypes==0.2.0
+narwhals==2.15.0
+numpy==1.26.4
+oauthlib==3.3.1
+openvino==2025.4.1
+openvino-telemetry==2025.2.0
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.1.0
+protobuf==4.25.8
+pyarrow==22.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.37.0
 requests==2.32.5
-urllib3==2.5.0
+requests-oauthlib==2.0.0
+rpds-py==0.30.0
+rsa==4.9.1
+six==1.17.0
+smmap==5.0.2
+streamlit==1.53.0
+tenacity==9.1.2
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.3.0
+toml==0.10.2
+tornado==6.5.4
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+watchdog==6.0.0
+Werkzeug==3.1.5
+wrapt==1.14.2
