--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-streamlit==1.53.0
-numpy==1.26.4
-pandas==2.3.3
-pillow==12.1.0
-altair==6.0.0
-pydeck==0.9.1
-tensorflow==2.15.0
-requests==2.32.5
-watchdog==6.0.0
-
+streamlit
+numpy
+pillow
+tensorflow
+openvino
